[gd_scene load_steps=2 format=2]

[ext_resource path="res://Browser/Dialogs/AssetLinksDialog.gd" type="Script" id=1]

[node name="AssetLinksDialog" type="WindowDialog"]
margin_right = 402.0
margin_bottom = 352.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 386.0
margin_bottom = 336.0

[node name="Directories" type="ItemList" parent="MarginContainer/VBoxContainer"]
margin_right = 370.0
margin_bottom = 283.0
mouse_default_cursor_shape = 2
size_flags_vertical = 3
fixed_icon_size = Vector2( 32, 32 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 287.0
margin_right = 370.0
margin_bottom = 320.0

[node name="Unlink" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 59.0
margin_bottom = 33.0
hint_tooltip = "Removes the link of the selected directory."
mouse_default_cursor_shape = 2
disabled = true
text = "Unlink"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 63.0
margin_right = 123.0
margin_bottom = 33.0
mouse_default_cursor_shape = 2
text = "Cancel"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/Directories" to="." method="_on_Directories_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Unlink" to="." method="_on_Unlink_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
